add ai assistamt

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- React entry point -->
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Chatbase Chatbot (corrected) -->
+    <script>
+      window.chatbaseConfig = {
+        chatbotId: "jA4fe7RSImUpnnI1uEZb_",
+      };
+    </script>
+    <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="jA4fe7RSImUpnnI1uEZb_"
+      defer>
+    </script>
   </body>
 </html>
